--- a/DescicloApp/chrome/DescicloApp/css/button.css
+++ b/DescicloApp/chrome/DescicloApp/css/button.css
@@ -14,6 +14,7 @@ input[type='submit']:not(.custom-appearance) {
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 	-moz-user-select: none;
 	background: -moz-linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
+	background: linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
 	border: 1px solid #aaa;
 	color: #444;
 	font-size: inherit;
@@ -26,6 +27,7 @@ input[type='button']:not(.custom-appearance):hover,
 input[type='submit']:not(.custom-appearance):hover {
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
 	background: #ebebeb -moz-linear-gradient(#fefefe, #f8f8f8 40%, #e9e9e9);
+	background: #ebebeb linear-gradient(#fefefe, #f8f8f8 40%, #e9e9e9);
 	border-color: #999;
 	color: #222;
 }
@@ -35,6 +37,7 @@ input[type='button']:not(.custom-appearance):active,
 input[type='submit']:not(.custom-appearance):active {
 	box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
 	background: #ebebeb -moz-linear-gradient(#f4f4f4, #efefef 40%, #dcdcdc);
+	background: #ebebeb linear-gradient(#f4f4f4, #efefef 40%, #dcdcdc);
 	color: #333;
 }
 
@@ -46,6 +49,7 @@ input[type='button'][disabled]:not(.custom-appearance):hover,
 input[type='submit'][disabled]:not(.custom-appearance):hover {
 	box-shadow: none;
 	background: -moz-linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
+	background: linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
 	border-color: #aaa;
 	color: #888;
 }
@@ -59,6 +63,7 @@ select:not(.custom-appearance):focus {
 		0 0 1px #c0c0c0,
 		0 0 1px #c0c0c0;
 	-moz-transition: border-color 200ms;
+	transition: border-color 200ms;
 	outline: none;
 }
 
@@ -83,6 +88,7 @@ input[type='button'].toolti:hover,
 input[type='submit'].toolti:hover {
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
 	background: #ebebeb -moz-linear-gradient(#fefefe, #f8f8f8 40%, #e9e9e9);
+	background: #ebebeb linear-gradient(#fefefe, #f8f8f8 40%, #e9e9e9);
 	border-color: #999;
 	color: #000;
 }
@@ -92,6 +98,7 @@ input[type='button'].toolti:active,
 input[type='submit'].toolti:active {
 	box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
 	background: #ebebeb -moz-linear-gradient(#f4f4f4, #efefef 40%, #dcdcdc);
+	background: #ebebeb linear-gradient(#f4f4f4, #efefef 40%, #dcdcdc);
 	color: #333;
 }
 
@@ -103,6 +110,7 @@ input[type='button'][disabled].toolti:hover,
 input[type='submit'][disabled].toolti:hover {
 	box-shadow: none;
 	background: -moz-linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
+	background: linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
 	border-color: #aaa;
 	color: #888;
 }
@@ -115,6 +123,7 @@ input[type='submit'].toolti:focus {
 		0 0 1px #c0c0c0,
 		0 0 1px #c0c0c0;
 	-moz-transition: border-color 200ms;
+	transition: border-color 200ms;
 	border-color: #4080fa;
 	outline: none;
 }
@@ -131,6 +140,7 @@ button.azul, input[type='button'].azul, input[type='submit'].azul {
 button:hover.azul, input[type='button'].azul:hover, input[type='submit'].azul:hover {
 	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
 	background: #ebebeb -moz-linear-gradient(#fefefe, #f8f8f8 40%, #e9e9e9);
+	background: #ebebeb linear-gradient(#fefefe, #f8f8f8 40%, #e9e9e9);
 	border-color: #0000ff;
 	color: #222;
 	background-color: #ebebeb;
@@ -139,11 +149,13 @@ button:hover.azul, input[type='button'].azul:hover, input[type='submit'].azul:ho
 button.azul:active, input[type='button'].azul:active, input[type='submit'].azul:active {
 	box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.2);
 	background: #ebebeb -moz-linear-gradient(#f4f4f4, #efefef 40%, #dcdcdc);
+	background: #ebebeb linear-gradient(#f4f4f4, #efefef 40%, #dcdcdc);
 	color: #333;
 }
 
 button[disabled].azul, input[type='button'][disabled].azul, input[type='submit'][disabled].azul, button[disabled].azul:hover, input[type='button'][disabled.azul]:hover, input[type='submit'][disabled].azul:hover {
 	box-shadow: none;
 	background: -moz-linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
+	background: linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
 	border-color: #aaa; color: #888;
 }
