--- a/DescicloApp/chrome/DescicloApp/css/button.css
+++ b/DescicloApp/chrome/DescicloApp/css/button.css
@@ -13,7 +13,6 @@ input[type='submit']:not(.custom-appearance) {
 	border-radius: 3px;
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 	-moz-user-select: none;
-	background: -moz-linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
 	background: linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
 	border: 1px solid #aaa;
 	color: #444;
@@ -26,7 +25,6 @@ button:not(.custom-appearance):hover,
 input[type='button']:not(.custom-appearance):hover,
 input[type='submit']:not(.custom-appearance):hover {
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-	background: #ebebeb -moz-linear-gradient(#fefefe, #f8f8f8 40%, #e9e9e9);
 	background: #ebebeb linear-gradient(#fefefe, #f8f8f8 40%, #e9e9e9);
 	border-color: #999;
 	color: #222;
@@ -36,7 +34,6 @@ button:not(.custom-appearance):active,
 input[type='button']:not(.custom-appearance):active,
 input[type='submit']:not(.custom-appearance):active {
 	box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
-	background: #ebebeb -moz-linear-gradient(#f4f4f4, #efefef 40%, #dcdcdc);
 	background: #ebebeb linear-gradient(#f4f4f4, #efefef 40%, #dcdcdc);
 	color: #333;
 }
@@ -48,7 +45,6 @@ button[disabled]:not(.custom-appearance):hover,
 input[type='button'][disabled]:not(.custom-appearance):hover,
 input[type='submit'][disabled]:not(.custom-appearance):hover {
 	box-shadow: none;
-	background: -moz-linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
 	background: linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
 	border-color: #aaa;
 	color: #888;
@@ -62,7 +58,6 @@ select:not(.custom-appearance):focus {
 		0 0 1px #c0c0c0,
 		0 0 1px #c0c0c0,
 		0 0 1px #c0c0c0;
-	-moz-transition: border-color 200ms;
 	transition: border-color 200ms;
 	outline: none;
 }
@@ -87,7 +82,6 @@ button.toolti:hover,
 input[type='button'].toolti:hover,
 input[type='submit'].toolti:hover {
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-	background: #ebebeb -moz-linear-gradient(#fefefe, #f8f8f8 40%, #e9e9e9);
 	background: #ebebeb linear-gradient(#fefefe, #f8f8f8 40%, #e9e9e9);
 	border-color: #999;
 	color: #000;
@@ -97,7 +91,6 @@ button.toolti:active,
 input[type='button'].toolti:active,
 input[type='submit'].toolti:active {
 	box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
-	background: #ebebeb -moz-linear-gradient(#f4f4f4, #efefef 40%, #dcdcdc);
 	background: #ebebeb linear-gradient(#f4f4f4, #efefef 40%, #dcdcdc);
 	color: #333;
 }
@@ -109,7 +102,6 @@ button[disabled].toolti:hover,
 input[type='button'][disabled].toolti:hover,
 input[type='submit'][disabled].toolti:hover {
 	box-shadow: none;
-	background: -moz-linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
 	background: linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
 	border-color: #aaa;
 	color: #888;
@@ -122,7 +114,6 @@ input[type='submit'].toolti:focus {
 		0 0 1px #c0c0c0,
 		0 0 1px #c0c0c0,
 		0 0 1px #c0c0c0;
-	-moz-transition: border-color 200ms;
 	transition: border-color 200ms;
 	border-color: #4080fa;
 	outline: none;
@@ -139,7 +130,6 @@ button.azul, input[type='button'].azul, input[type='submit'].azul {
 
 button:hover.azul, input[type='button'].azul:hover, input[type='submit'].azul:hover {
 	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
-	background: #ebebeb -moz-linear-gradient(#fefefe, #f8f8f8 40%, #e9e9e9);
 	background: #ebebeb linear-gradient(#fefefe, #f8f8f8 40%, #e9e9e9);
 	border-color: #0000ff;
 	color: #222;
@@ -148,14 +138,40 @@ button:hover.azul, input[type='button'].azul:hover, input[type='submit'].azul:ho
 
 button.azul:active, input[type='button'].azul:active, input[type='submit'].azul:active {
 	box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.2);
-	background: #ebebeb -moz-linear-gradient(#f4f4f4, #efefef 40%, #dcdcdc);
 	background: #ebebeb linear-gradient(#f4f4f4, #efefef 40%, #dcdcdc);
 	color: #333;
 }
 
 button[disabled].azul, input[type='button'][disabled].azul, input[type='submit'][disabled].azul, button[disabled].azul:hover, input[type='button'][disabled.azul]:hover, input[type='submit'][disabled].azul:hover {
 	box-shadow: none;
-	background: -moz-linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
+	background: linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
+	border-color: #aaa; color: #888;
+}
+
+button.cinza, input[type='button'].cinza, input[type='submit'].cinza {
+	border: 1px solid #000000;
+	color: #000000;
+	margin-bottom: 0px;
+	padding: 3px 12px 3px 12px;
+	background-color: #f4f4f4;
+}
+
+button:hover.cinza, input[type='button'].cinza:hover, input[type='submit'].cinza:hover {
+	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
+	background: #ebebeb linear-gradient(#fefefe, #f8f8f8 40%, #e9e9e9);
+	border-color: #0000ff;
+	color: #222;
+	background-color: #ebebeb;
+}
+
+button.cinza:active, input[type='button'].cinza:active, input[type='submit'].cinza:active {
+	box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.2);
+	background: #ebebeb linear-gradient(#f4f4f4, #efefef 40%, #dcdcdc);
+	color: #333;
+}
+
+button[disabled].cinza, input[type='button'][disabled].cinza, input[type='submit'][disabled].cinza, button[disabled].cinza:hover, input[type='button'][disabled.cinza]:hover, input[type='submit'][disabled].cinza:hover {
+	box-shadow: none;
 	background: linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
 	border-color: #aaa; color: #888;
 }
