--- a/DescicloApp/chrome/DescicloApp/css/select.css
+++ b/DescicloApp/chrome/DescicloApp/css/select.css
@@ -12,7 +12,6 @@ select {
 	border-radius: 10px;
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 	-moz-user-select: none;
-	background-image: url("../imagens/select.png"), -moz-linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
 	background-image: url("../imagens/select.png"), linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
 	background-position: center right;
 	background-repeat: no-repeat;
@@ -28,20 +27,17 @@ select {
 
 select:disabled {
 	color: graytext;
-	background-image: url("../imagens/disabled_select.png"), -moz-linear-gradient(#fefefe, #f8f8f8 40%, #e9e9e9);
 	background-image: url("../imagens/disabled_select.png"), linear-gradient(#fefefe, #f8f8f8 40%, #e9e9e9);
 }
 
 select:enabled:hover {
-	-moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-	background-image: url("../imagens/select.png"), -moz-linear-gradient(#fefefe, #f8f8f8 40%, #e9e9e9);
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
 	background-image: url("../imagens/select.png"), linear-gradient(#fefefe, #f8f8f8 40%, #e9e9e9);
 	color: #333;
 }
 
 select:enabled:active {
-	-moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
-	background-image: url("../imagens/select.png"), -moz-linear-gradient(#f4f4f4, #efefef 40%, #dcdcdc);
+	box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
 	background-image: url("../imagens/select.png"), linear-gradient(#f4f4f4, #efefef 40%, #dcdcdc);
 	color: #444;
 }
