--- a/DescicloApp/chrome/DescicloApp/css/button.css
+++ b/DescicloApp/chrome/DescicloApp/css/button.css
@@ -7,9 +7,7 @@
 
 /* Codigo dos botoes da extensao */
 
-button:not(.custom-appearance),
-input[type='button']:not(.custom-appearance),
-input[type='submit']:not(.custom-appearance) {
+button:not(.custom-appearance) {
 	border-radius: 3px;
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 	-moz-user-select: none;
@@ -21,38 +19,27 @@ input[type='submit']:not(.custom-appearance) {
 	padding: 3px 12px;
 }
 
-button:not(.custom-appearance):hover,
-input[type='button']:not(.custom-appearance):hover,
-input[type='submit']:not(.custom-appearance):hover {
+button:not(.custom-appearance):hover {
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
 	background: #ebebeb linear-gradient(#fefefe, #f8f8f8 40%, #e9e9e9);
 	border-color: #999;
 	color: #222;
 }
 
-button:not(.custom-appearance):active,
-input[type='button']:not(.custom-appearance):active,
-input[type='submit']:not(.custom-appearance):active {
+button:not(.custom-appearance):active {
 	box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
 	background: #ebebeb linear-gradient(#f4f4f4, #efefef 40%, #dcdcdc);
 	color: #333;
 }
 
-button[disabled]:not(.custom-appearance),
-input[type='button'][disabled]:not(.custom-appearance),
-input[type='submit'][disabled]:not(.custom-appearance),
-button[disabled]:not(.custom-appearance):hover,
-input[type='button'][disabled]:not(.custom-appearance):hover,
-input[type='submit'][disabled]:not(.custom-appearance):hover {
+button[disabled]:not(.custom-appearance), button[disabled]:not(.custom-appearance):hover {
 	box-shadow: none;
 	background: linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
 	border-color: #aaa;
 	color: #888;
 }
 
-button:not(.custom-appearance):focus,
-input[type='submit']:not(.custom-appearance):focus,
-select:not(.custom-appearance):focus {
+button:not(.custom-appearance):focus {
 	box-shadow: inset 0 1px 2px white,
 		0 1px 2px rgba(0, 0, 0, .2),
 		0 0 1px #c0c0c0,
@@ -64,9 +51,7 @@ select:not(.custom-appearance):focus {
 
 /* Botao para os tooltips */
 
-button.toolti,
-input[type='button'].toolti,
-input[type='submit'].toolti {
+button.toolti {
 	border-radius: 3px;
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 	-moz-user-select: none;
@@ -78,37 +63,28 @@ input[type='submit'].toolti {
 	padding: 3px 12px;
 }
 
-button.toolti:hover,
-input[type='button'].toolti:hover,
-input[type='submit'].toolti:hover {
+button.toolti:hover {
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
 	background: #ebebeb linear-gradient(#fefefe, #f8f8f8 40%, #e9e9e9);
 	border-color: #999;
 	color: #000;
 }
 
-button.toolti:active,
-input[type='button'].toolti:active,
-input[type='submit'].toolti:active {
+button.toolti:active {
 	box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
 	background: #ebebeb linear-gradient(#f4f4f4, #efefef 40%, #dcdcdc);
 	color: #333;
 }
 
 button[disabled].toolti,
-input[type='button'][disabled].toolti,
-input[type='submit'][disabled].toolti,
-button[disabled].toolti:hover,
-input[type='button'][disabled].toolti:hover,
-input[type='submit'][disabled].toolti:hover {
+button[disabled].toolti:hover {
 	box-shadow: none;
 	background: linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
 	border-color: #aaa;
 	color: #888;
 }
 
-button.toolti:focus,
-input[type='submit'].toolti:focus {
+button.toolti:focus {
 	box-shadow: inset 0 1px 2px white,
 		0 1px 2px rgba(0, 0, 0, .2),
 		0 0 1px #c0c0c0,
@@ -120,7 +96,7 @@ input[type='submit'].toolti:focus {
 }
 
 /* Botao da popup */
-button.azul, input[type='button'].azul, input[type='submit'].azul {
+input[type='submit'].azul {
 	border: 1px solid #000000;
 	color: #000000;
 	margin-bottom: 0px;
@@ -128,7 +104,7 @@ button.azul, input[type='button'].azul, input[type='submit'].azul {
 	background-color: #00ffff;
 }
 
-button:hover.azul, input[type='button'].azul:hover, input[type='submit'].azul:hover {
+input[type='submit'].azul:hover {
 	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
 	background: #ebebeb linear-gradient(#fefefe, #f8f8f8 40%, #e9e9e9);
 	border-color: #0000ff;
@@ -136,41 +112,13 @@ button:hover.azul, input[type='button'].azul:hover, input[type='submit'].azul:ho
 	background-color: #ebebeb;
 }
 
-button.azul:active, input[type='button'].azul:active, input[type='submit'].azul:active {
+input[type='submit'].azul:active {
 	box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.2);
 	background: #ebebeb linear-gradient(#f4f4f4, #efefef 40%, #dcdcdc);
 	color: #333;
 }
 
-button[disabled].azul, input[type='button'][disabled].azul, input[type='submit'][disabled].azul, button[disabled].azul:hover, input[type='button'][disabled.azul]:hover, input[type='submit'][disabled].azul:hover {
-	box-shadow: none;
-	background: linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
-	border-color: #aaa; color: #888;
-}
-
-button.cinza, input[type='button'].cinza, input[type='submit'].cinza {
-	border: 1px solid #000000;
-	color: #000000;
-	margin-bottom: 0px;
-	padding: 3px 12px 3px 12px;
-	background-color: #f4f4f4;
-}
-
-button:hover.cinza, input[type='button'].cinza:hover, input[type='submit'].cinza:hover {
-	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
-	background: #ebebeb linear-gradient(#fefefe, #f8f8f8 40%, #e9e9e9);
-	border-color: #0000ff;
-	color: #222;
-	background-color: #ebebeb;
-}
-
-button.cinza:active, input[type='button'].cinza:active, input[type='submit'].cinza:active {
-	box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.2);
-	background: #ebebeb linear-gradient(#f4f4f4, #efefef 40%, #dcdcdc);
-	color: #333;
-}
-
-button[disabled].cinza, input[type='button'][disabled].cinza, input[type='submit'][disabled].cinza, button[disabled].cinza:hover, input[type='button'][disabled.cinza]:hover, input[type='submit'][disabled].cinza:hover {
+input[type='submit'][disabled].azul, input[type='submit'][disabled].azul:hover {
 	box-shadow: none;
 	background: linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
 	border-color: #aaa; color: #888;
