--- a/DescicloApp/chrome/DescicloApp/css/button.css
+++ b/DescicloApp/chrome/DescicloApp/css/button.css
@@ -7,46 +7,46 @@
 
 /* Codigo dos botoes da extensao */
 
-button:not(.custom-appearance) {
-	border-radius: 3px;
-	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-	-moz-user-select: none;
-	background: linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
-	border: 1px solid #aaa;
-	color: #444;
-	font-size: inherit;
-	margin-bottom: 0;
-	padding: 3px 12px;
+button:not(.custom-appearance), input[type='submit']:not(.custom-appearance) {
+border-radius: 3px;
+box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+-moz-user-select: none;
+background: linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
+border: 1px solid #aaa;
+color: #444;
+font-size: inherit;
+margin-bottom: 0;
+padding: 3px 12px;
 }
 
-button:not(.custom-appearance):hover {
-	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-	background: #ebebeb linear-gradient(#fefefe, #f8f8f8 40%, #e9e9e9);
-	border-color: #999;
-	color: #222;
+button:not(.custom-appearance):hover, input[type='submit']:not(.custom-appearance):hover {
+box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+background: #ebebeb linear-gradient(#fefefe, #f8f8f8 40%, #e9e9e9);
+border-color: #999;
+color: #222;
 }
 
-button:not(.custom-appearance):active {
-	box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
-	background: #ebebeb linear-gradient(#f4f4f4, #efefef 40%, #dcdcdc);
-	color: #333;
+button:not(.custom-appearance):active, input[type='submit']:not(.custom-appearance):active {
+box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
+background: #ebebeb linear-gradient(#f4f4f4, #efefef 40%, #dcdcdc);
+color: #333;
 }
 
-button[disabled]:not(.custom-appearance), button[disabled]:not(.custom-appearance):hover {
-	box-shadow: none;
-	background: linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
-	border-color: #aaa;
-	color: #888;
+button[disabled]:not(.custom-appearance), input[type='submit'][disabled]:not(.custom-appearance), button[disabled]:not(.custom-appearance):hover, input[type='submit'][disabled]:not(.custom-appearance):hover {
+box-shadow: none;
+background: linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
+border-color: #aaa;
+color: #888;
 }
 
-button:not(.custom-appearance):focus {
-	box-shadow: inset 0 1px 2px white,
-		0 1px 2px rgba(0, 0, 0, .2),
-		0 0 1px #c0c0c0,
-		0 0 1px #c0c0c0,
-		0 0 1px #c0c0c0;
-	transition: border-color 200ms;
-	outline: none;
+button:not(.custom-appearance):focus, input[type='submit']:not(.custom-appearance):focus, select:not(.custom-appearance):focus {
+box-shadow: inset 0 1px 2px white,
+0 1px 2px rgba(0, 0, 0, .2),
+0 0 1px #c0c0c0,
+0 0 1px #c0c0c0,
+0 0 1px #c0c0c0;
+transition: border-color 200ms;
+outline: none;
 }
 
 /* Botao para os tooltips */
